Version 3.9.10
- Fixed another REP bug in the P2 optimizer

Version 3.9.9
- Use P2 encod instruction for >| operator
- Allow x.y expressions to reference constants in an object
- Removed WORD from BASIC types
- Fixed a bug in converting DJNZ to REP in P2 code
- Fixed unsigned divide and remainder in BASIC and C

Version 3.9.8
- Added __propeller__ symbol to preprocessor
- Added SELECT CASE to BASIC
- Fixed a nasty buffer overflow in integer prints
- Fixed close #n (it was losing the object pointer)
- Fixed an optimizer bug in replacing registers
- Fixed an assembly output bug when the input contains only leaf
  functions
- Made for loops with float variables work
- Fixed missing _rx function for P2

Version 3.9.7
- Fixed a bug in converting float values to integer
- Fixed a bug in handling local arrays
- Fixed an error in determining types of memory references
- Used builtin functions to push/pop collections of variables (reduces
  HUB size)
- Added syntax for initializing arrays in BASIC
- Fixed some Mac build issues (thanks to David Betz)

Version 3.9.6
- Re-use the same set of registers for all functions in LMM mode,
  saving/restoring them on function entry/exit. This saves a *lot* of
  COG memory, at the cost of some execution speed and HUB space.
- Added try/catch and LEN to BASIC
- Added anonymous functions and closures to BASIC
- Clean up properly after \ is used without an abort happening
- abort now exits if there is no \ to catch it
- Fixed a bug where methods were incorrectly marked as used

Version 3.9.5
- Fixed stack allocation when HUB bss is removed (-O2 option)
- Implemented global variables
- Updated BASIC I/O functions

Version 3.9.4
- Report errors for use of private methods
- Fixed an optimizer bug that could cause the compiler to crash
- Fixed output of repeated strings of non-zero bytes in the DAT
  section
- Many improvements to BASIC

Version 3.9.3
- Allow backquote (`) to quote special characters in Spin identifiers