@@ -81,52 +81,53 @@ unsigned char sys_p2_code_spin[] = {
   0x73, 0x65, 0x74, 0x71, 0x20, 0x70, 0x61, 0x72, 0x61, 0x6d, 0x0a, 0x20,
   0x20, 0x20, 0x20, 0x63, 0x6f, 0x67, 0x69, 0x6e, 0x69, 0x74, 0x20, 0x69,
   0x64, 0x2c, 0x20, 0x63, 0x6f, 0x64, 0x65, 0x20, 0x77, 0x63, 0x0a, 0x20,
-  0x20, 0x65, 0x6e, 0x64, 0x61, 0x73, 0x6d, 0x0a, 0x20, 0x20, 0x72, 0x65,
-  0x74, 0x75, 0x72, 0x6e, 0x20, 0x69, 0x64, 0x0a, 0x63, 0x6f, 0x6e, 0x0a,
-  0x20, 0x5f, 0x72, 0x78, 0x70, 0x69, 0x6e, 0x20, 0x3d, 0x20, 0x33, 0x31,
-  0x0a, 0x20, 0x5f, 0x74, 0x78, 0x70, 0x69, 0x6e, 0x20, 0x3d, 0x20, 0x33,
-  0x30, 0x0a, 0x20, 0x5f, 0x62, 0x69, 0x74, 0x63, 0x79, 0x63, 0x6c, 0x65,
-  0x73, 0x20, 0x3d, 0x20, 0x38, 0x30, 0x5f, 0x30, 0x30, 0x30, 0x5f, 0x30,
-  0x30, 0x30, 0x20, 0x2f, 0x20, 0x31, 0x31, 0x35, 0x5f, 0x32, 0x30, 0x30,
-  0x0a, 0x70, 0x72, 0x69, 0x20, 0x5f, 0x74, 0x78, 0x28, 0x63, 0x29, 0x20,
-  0x7c, 0x20, 0x76, 0x61, 0x6c, 0x2c, 0x20, 0x6e, 0x65, 0x78, 0x74, 0x63,
-  0x6e, 0x74, 0x0a, 0x20, 0x20, 0x44, 0x49, 0x52, 0x42, 0x5b, 0x5f, 0x74,
-  0x78, 0x70, 0x69, 0x6e, 0x5d, 0x20, 0x3a, 0x3d, 0x20, 0x31, 0x0a, 0x20,
-  0x20, 0x4f, 0x55, 0x54, 0x42, 0x5b, 0x5f, 0x74, 0x78, 0x70, 0x69, 0x6e,
-  0x5d, 0x20, 0x3a, 0x3d, 0x20, 0x31, 0x0a, 0x20, 0x20, 0x76, 0x61, 0x6c,
-  0x20, 0x3a, 0x3d, 0x20, 0x28, 0x63, 0x20, 0x7c, 0x20, 0x32, 0x35, 0x36,
-  0x29, 0x20, 0x3c, 0x3c, 0x20, 0x31, 0x0a, 0x20, 0x20, 0x6e, 0x65, 0x78,
-  0x74, 0x63, 0x6e, 0x74, 0x20, 0x3a, 0x3d, 0x20, 0x63, 0x6e, 0x74, 0x0a,
-  0x20, 0x20, 0x72, 0x65, 0x70, 0x65, 0x61, 0x74, 0x20, 0x31, 0x30, 0x0a,
-  0x20, 0x20, 0x20, 0x20, 0x77, 0x61, 0x69, 0x74, 0x63, 0x6e, 0x74, 0x28,
-  0x6e, 0x65, 0x78, 0x74, 0x63, 0x6e, 0x74, 0x20, 0x2b, 0x3d, 0x20, 0x5f,
-  0x62, 0x69, 0x74, 0x63, 0x79, 0x63, 0x6c, 0x65, 0x73, 0x29, 0x0a, 0x20,
-  0x20, 0x20, 0x20, 0x4f, 0x55, 0x54, 0x42, 0x5b, 0x5f, 0x74, 0x78, 0x70,
-  0x69, 0x6e, 0x5d, 0x20, 0x3a, 0x3d, 0x20, 0x76, 0x61, 0x6c, 0x0a, 0x20,
-  0x20, 0x20, 0x20, 0x76, 0x61, 0x6c, 0x20, 0x3e, 0x3e, 0x3d, 0x20, 0x31,
-  0x0a, 0x70, 0x72, 0x69, 0x20, 0x5f, 0x72, 0x78, 0x20, 0x7c, 0x20, 0x76,
-  0x61, 0x6c, 0x2c, 0x20, 0x77, 0x61, 0x69, 0x74, 0x63, 0x79, 0x63, 0x6c,
-  0x65, 0x73, 0x2c, 0x20, 0x69, 0x0a, 0x20, 0x20, 0x44, 0x49, 0x52, 0x42,
-  0x5b, 0x5f, 0x72, 0x78, 0x70, 0x69, 0x6e, 0x5d, 0x20, 0x3a, 0x3d, 0x20,
-  0x30, 0x0a, 0x20, 0x20, 0x72, 0x65, 0x70, 0x65, 0x61, 0x74, 0x0a, 0x20,
-  0x20, 0x77, 0x68, 0x69, 0x6c, 0x65, 0x20, 0x49, 0x4e, 0x42, 0x5b, 0x5f,
-  0x72, 0x78, 0x70, 0x69, 0x6e, 0x5d, 0x20, 0x3c, 0x3e, 0x20, 0x30, 0x0a,
-  0x20, 0x20, 0x77, 0x61, 0x69, 0x74, 0x63, 0x79, 0x63, 0x6c, 0x65, 0x73,
-  0x20, 0x3a, 0x3d, 0x20, 0x63, 0x6e, 0x74, 0x20, 0x2b, 0x20, 0x28, 0x5f,
-  0x62, 0x69, 0x74, 0x63, 0x79, 0x63, 0x6c, 0x65, 0x73, 0x3e, 0x3e, 0x31,
-  0x29, 0x0a, 0x20, 0x20, 0x76, 0x61, 0x6c, 0x20, 0x3a, 0x3d, 0x20, 0x30,
-  0x0a, 0x20, 0x20, 0x72, 0x65, 0x70, 0x65, 0x61, 0x74, 0x20, 0x38, 0x0a,
-  0x20, 0x20, 0x20, 0x20, 0x77, 0x61, 0x69, 0x74, 0x63, 0x6e, 0x74, 0x28,
-  0x77, 0x61, 0x69, 0x74, 0x63, 0x79, 0x63, 0x6c, 0x65, 0x73, 0x20, 0x2b,
-  0x3d, 0x20, 0x5f, 0x62, 0x69, 0x74, 0x63, 0x79, 0x63, 0x6c, 0x65, 0x73,
-  0x29, 0x0a, 0x20, 0x20, 0x20, 0x20, 0x76, 0x61, 0x6c, 0x20, 0x3a, 0x3d,
-  0x20, 0x28, 0x49, 0x4e, 0x42, 0x5b, 0x5f, 0x72, 0x78, 0x70, 0x69, 0x6e,
-  0x5d, 0x20, 0x3c, 0x3c, 0x20, 0x37, 0x29, 0x20, 0x7c, 0x20, 0x28, 0x76,
-  0x61, 0x6c, 0x3e, 0x3e, 0x31, 0x29, 0x0a, 0x20, 0x20, 0x77, 0x61, 0x69,
+  0x69, 0x66, 0x5f, 0x63, 0x20, 0x6e, 0x65, 0x67, 0x20, 0x69, 0x64, 0x2c,
+  0x20, 0x23, 0x31, 0x0a, 0x20, 0x20, 0x65, 0x6e, 0x64, 0x61, 0x73, 0x6d,
+  0x0a, 0x20, 0x20, 0x72, 0x65, 0x74, 0x75, 0x72, 0x6e, 0x20, 0x69, 0x64,
+  0x0a, 0x63, 0x6f, 0x6e, 0x0a, 0x20, 0x5f, 0x72, 0x78, 0x70, 0x69, 0x6e,
+  0x20, 0x3d, 0x20, 0x33, 0x31, 0x0a, 0x20, 0x5f, 0x74, 0x78, 0x70, 0x69,
+  0x6e, 0x20, 0x3d, 0x20, 0x33, 0x30, 0x0a, 0x20, 0x5f, 0x62, 0x69, 0x74,
+  0x63, 0x79, 0x63, 0x6c, 0x65, 0x73, 0x20, 0x3d, 0x20, 0x38, 0x30, 0x5f,
+  0x30, 0x30, 0x30, 0x5f, 0x30, 0x30, 0x30, 0x20, 0x2f, 0x20, 0x31, 0x31,
+  0x35, 0x5f, 0x32, 0x30, 0x30, 0x0a, 0x70, 0x72, 0x69, 0x20, 0x5f, 0x74,
+  0x78, 0x28, 0x63, 0x29, 0x20, 0x7c, 0x20, 0x76, 0x61, 0x6c, 0x2c, 0x20,
+  0x6e, 0x65, 0x78, 0x74, 0x63, 0x6e, 0x74, 0x0a, 0x20, 0x20, 0x44, 0x49,
+  0x52, 0x42, 0x5b, 0x5f, 0x74, 0x78, 0x70, 0x69, 0x6e, 0x5d, 0x20, 0x3a,
+  0x3d, 0x20, 0x31, 0x0a, 0x20, 0x20, 0x4f, 0x55, 0x54, 0x42, 0x5b, 0x5f,
+  0x74, 0x78, 0x70, 0x69, 0x6e, 0x5d, 0x20, 0x3a, 0x3d, 0x20, 0x31, 0x0a,
+  0x20, 0x20, 0x76, 0x61, 0x6c, 0x20, 0x3a, 0x3d, 0x20, 0x28, 0x63, 0x20,
+  0x7c, 0x20, 0x32, 0x35, 0x36, 0x29, 0x20, 0x3c, 0x3c, 0x20, 0x31, 0x0a,
+  0x20, 0x20, 0x6e, 0x65, 0x78, 0x74, 0x63, 0x6e, 0x74, 0x20, 0x3a, 0x3d,
+  0x20, 0x63, 0x6e, 0x74, 0x0a, 0x20, 0x20, 0x72, 0x65, 0x70, 0x65, 0x61,
+  0x74, 0x20, 0x31, 0x30, 0x0a, 0x20, 0x20, 0x20, 0x20, 0x77, 0x61, 0x69,
+  0x74, 0x63, 0x6e, 0x74, 0x28, 0x6e, 0x65, 0x78, 0x74, 0x63, 0x6e, 0x74,
+  0x20, 0x2b, 0x3d, 0x20, 0x5f, 0x62, 0x69, 0x74, 0x63, 0x79, 0x63, 0x6c,
+  0x65, 0x73, 0x29, 0x0a, 0x20, 0x20, 0x20, 0x20, 0x4f, 0x55, 0x54, 0x42,
+  0x5b, 0x5f, 0x74, 0x78, 0x70, 0x69, 0x6e, 0x5d, 0x20, 0x3a, 0x3d, 0x20,
+  0x76, 0x61, 0x6c, 0x0a, 0x20, 0x20, 0x20, 0x20, 0x76, 0x61, 0x6c, 0x20,
+  0x3e, 0x3e, 0x3d, 0x20, 0x31, 0x0a, 0x70, 0x72, 0x69, 0x20, 0x5f, 0x72,
+  0x78, 0x20, 0x7c, 0x20, 0x76, 0x61, 0x6c, 0x2c, 0x20, 0x77, 0x61, 0x69,
+  0x74, 0x63, 0x79, 0x63, 0x6c, 0x65, 0x73, 0x2c, 0x20, 0x69, 0x0a, 0x20,
+  0x20, 0x44, 0x49, 0x52, 0x42, 0x5b, 0x5f, 0x72, 0x78, 0x70, 0x69, 0x6e,
+  0x5d, 0x20, 0x3a, 0x3d, 0x20, 0x30, 0x0a, 0x20, 0x20, 0x72, 0x65, 0x70,
+  0x65, 0x61, 0x74, 0x0a, 0x20, 0x20, 0x77, 0x68, 0x69, 0x6c, 0x65, 0x20,
+  0x49, 0x4e, 0x42, 0x5b, 0x5f, 0x72, 0x78, 0x70, 0x69, 0x6e, 0x5d, 0x20,
+  0x3c, 0x3e, 0x20, 0x30, 0x0a, 0x20, 0x20, 0x77, 0x61, 0x69, 0x74, 0x63,
+  0x79, 0x63, 0x6c, 0x65, 0x73, 0x20, 0x3a, 0x3d, 0x20, 0x63, 0x6e, 0x74,
+  0x20, 0x2b, 0x20, 0x28, 0x5f, 0x62, 0x69, 0x74, 0x63, 0x79, 0x63, 0x6c,
+  0x65, 0x73, 0x3e, 0x3e, 0x31, 0x29, 0x0a, 0x20, 0x20, 0x76, 0x61, 0x6c,
+  0x20, 0x3a, 0x3d, 0x20, 0x30, 0x0a, 0x20, 0x20, 0x72, 0x65, 0x70, 0x65,
+  0x61, 0x74, 0x20, 0x38, 0x0a, 0x20, 0x20, 0x20, 0x20, 0x77, 0x61, 0x69,
   0x74, 0x63, 0x6e, 0x74, 0x28, 0x77, 0x61, 0x69, 0x74, 0x63, 0x79, 0x63,
-  0x6c, 0x65, 0x73, 0x20, 0x2b, 0x20, 0x5f, 0x62, 0x69, 0x74, 0x63, 0x79,
-  0x63, 0x6c, 0x65, 0x73, 0x29, 0x0a, 0x20, 0x20, 0x5f, 0x74, 0x78, 0x28,
-  0x76, 0x61, 0x6c, 0x29, 0x0a, 0x20, 0x20, 0x72, 0x65, 0x74, 0x75, 0x72,
-  0x6e, 0x20, 0x76, 0x61, 0x6c, 0x0a, 0x00
+  0x6c, 0x65, 0x73, 0x20, 0x2b, 0x3d, 0x20, 0x5f, 0x62, 0x69, 0x74, 0x63,
+  0x79, 0x63, 0x6c, 0x65, 0x73, 0x29, 0x0a, 0x20, 0x20, 0x20, 0x20, 0x76,
+  0x61, 0x6c, 0x20, 0x3a, 0x3d, 0x20, 0x28, 0x49, 0x4e, 0x42, 0x5b, 0x5f,
+  0x72, 0x78, 0x70, 0x69, 0x6e, 0x5d, 0x20, 0x3c, 0x3c, 0x20, 0x37, 0x29,
+  0x20, 0x7c, 0x20, 0x28, 0x76, 0x61, 0x6c, 0x3e, 0x3e, 0x31, 0x29, 0x0a,
+  0x20, 0x20, 0x77, 0x61, 0x69, 0x74, 0x63, 0x6e, 0x74, 0x28, 0x77, 0x61,
+  0x69, 0x74, 0x63, 0x79, 0x63, 0x6c, 0x65, 0x73, 0x20, 0x2b, 0x20, 0x5f,
+  0x62, 0x69, 0x74, 0x63, 0x79, 0x63, 0x6c, 0x65, 0x73, 0x29, 0x0a, 0x20,
+  0x20, 0x5f, 0x74, 0x78, 0x28, 0x76, 0x61, 0x6c, 0x29, 0x0a, 0x20, 0x20,
+  0x72, 0x65, 0x74, 0x75, 0x72, 0x6e, 0x20, 0x76, 0x61, 0x6c, 0x0a, 0x00
 };
-unsigned int sys_p2_code_spin_len = 1542;
+unsigned int sys_p2_code_spin_len = 1559;
