@@ -1,5 +1,6 @@
 Version 3.9.10
 - Fixed another REP bug in the P2 optimizer
+- Fixed cognew/coginit return value when no free cog is available
 
 Version 3.9.9
 - Use P2 encod instruction for >| operator
